WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
279889
setCameraActive should not unmute microphone if UA previously muted both camera and microphone
https://bugs.webkit.org/show_bug.cgi?id=279889
Summary
setCameraActive should not unmute microphone if UA previously muted both came...
youenn fablet
Reported
2024-09-18 07:02:15 PDT
setCameraActive should not unmute microphone if UA previously muted both camera and microphone
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-09-18 07:02:29 PDT
<
rdar://problem/136221456
>
EWS
Comment 2
2024-09-19 14:38:05 PDT
Committed
283948@main
(db99ef7168d7): <
https://commits.webkit.org/283948@main
> Reviewed commits have been landed. Closing PR #33828 and removing active labels.
Marta Darbinyan
Comment 3
2024-09-20 12:02:40 PDT
Reopened Bugzilla. REGRESSION (
283948@main
): [EWS macOS ] TestWebKitAPI.WebKit2.ConnectedToHardwareConsole is constant timeout, tracking revert in
https://bugs.webkit.org/show_bug.cgi?id=280075
.
youenn fablet
Comment 4
2024-09-22 21:58:29 PDT
Regression was due to WebPageProxy::setMuted. We were first setting the mute states to all in case of hardware console disconnection and then updating m_mutedCaptureKindsDesiredByWebApp accordingly. We need to update m_mutedCaptureKindsDesiredByWebApp before setting all mute states.
EWS
Comment 5
2024-09-23 05:51:50 PDT
Committed
284069@main
(df859556a4dc): <
https://commits.webkit.org/284069@main
> Reviewed commits have been landed. Closing PR #34071 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug